# METIS

./: CHANGES_SUMMARY.md  CMakeLists.txt  FETCHCONTENT.md  QUICKSTART.md  README.md  test_fetchcontent.sh
cmake/: METISConfig.cmake.in
conf/: gkbuild.cmake
examples/: CMakeLists.txt.fetchcontent  README.md  example_fetchcontent.c
include/: CMakeLists.txt
libmetis/: CMakeLists.txt
programs/: CMakeLists.txt
